--- a/style.css
+++ b/style.css
@@ -23,3 +23,12 @@
     padding: 24px 0;
     font-size: 24px;
 }
+.escola-imagem{
+     width: 25%;
+}
+.escola{
+     background-image: linear-gradient(#040A04,#FB03D4);
+     color: white;
+     display: flex;
+     
+}
