--- a/style.css
+++ b/style.css
@@ -29,6 +29,14 @@
 .escola{
      background-image: linear-gradient(#040A04,#FB03D4);
      color: white;
-     display: flex;
-     
+     display: flex; 
+     justify-content: center;
+     align-items: center;
+     padding: 24px 0;
+}
+.escola-conteudo{
+     width: 35%;
+ }
+.escola-titulo{
+     padding: 24px 0;
 }
