--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
      width: 25%;
 }
 .escola{
-     background-image: linear-gradient(#040A04,#FB03D4);
+     background-image: linear-gradient(#1c4a1c,#18fb03);
      color: white;
      display: flex; 
      justify-content: center;
