--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
      justify-content: center;
      align-items: center;
      padding: 24px 0;
+     text-align: center;
 }
 .escola-conteudo{
      width: 35%;
