--- a/style.css
+++ b/style.css
@@ -47,11 +47,15 @@
      text-align: center;
 }
 .estudante-imagem{
-     width: 50%;
-}
-.estudante-icone{
-     width: 10%;
-}
-.estudante-div{
+     width: 120px;
+   }
+   .estudante-icone{
+     width: 24px;
+   }
+   .estudante-div{
      text-align: center;
-}
+   }
+   .estudante-todos{
+     display: grid;
+     grid-template-columns: 20% 20% 20%;
+   }
