--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
      width: 370px;
    }
    .estudante-icone{
-     width: 60px;
+     width: 40px;
    }
    .estudante-div{
      text-align: center;
@@ -66,4 +66,7 @@
      background-color:black;
      padding: 15px 0;
      text-align: center;
+   }
+   .estudante2-imagem{
+     
    }
