--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@
      padding: 15px 0;
      text-align: center;
    }
-   .estudante2-imagem{
-     
+   .estudante2-icone{
+     width: 40px;
+     text-align: center;
    }
