--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
      padding: 15px 0;
      text-align: center;
    }
-   .estudante2-icone{
+   .estudante-icone2{
      width: 40px;
      text-align: center;
    }
