--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
    }
    .estudante-todos{
      display: grid;
-     grid-template-columns: 20% 30% 20%;
+     grid-template-columns: 20% 20%;
      text-align: center;
    }
    .fundo{
