--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@
    }
    .estudante-todos{
      display: grid;
-     grid-template-columns: 20% 30% 20%;
+     grid-template-columns: 22% 30% 20%;
+     text-align: center;
    }
    .fundo{
      background-color:black;
