--- a/style.css
+++ b/style.css
@@ -69,6 +69,6 @@
      text-align: center;
    }
    .fundo-um{
-     background-color: #18fb03;
+     background-image: linear-gradient(#1c4a1c,#18fb03);
    }
   
