--- a/style.css
+++ b/style.css
@@ -69,6 +69,6 @@
      text-align: center;
    }
    .fundo-um{
-     background-image: linear-gradient(#18fb03,#0f590f);
+     background-image: linear-gradient(#17ef04,#010501);
    }
   
