--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
      text-align: center;
    }
    .fundo{
-     background-color:black;
+     background-color:#010501;
      padding: 15px 0;
      text-align: center;
    }
