--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 
 .cabecalho {
-     background-color:  #1c2a4a ;
+     background-color:  #151c40 ;
      color: white;
      display: flex;
      justify-content: space-around;
